...
import { useAppSelector } from '@store/hooks/useAppSelector';
import { selectHomePageData } from '@store/word/selectors';
import { DefaultTheme } from '@theme/index';
import React from 'react';
import { View, Text, StyleSheet, TouchableOpacity, ScrollView } from 'react-native';

const HomeScreen: React.FC = () => {
  const dispatch = useAppDispatch();
  const { userName, userId, loading, error, lastFavorite, lastSeenWord } = useAppSelector((state) => selectHomePageData(state));
  React.useEffect(() => {
    dispatch(viewFavorites(userId))
    dispatch(viewHistory(userId))
  }, []);
...
            word={lastFavorite.word}
            onPress={() => {
              navigation.navigate('WordsModal', {
                word: lastFavorite.word
              })
            }}
            action='Ver Significado'
            variant='secondary'
            navigateAction='Ver outros favoritos'
            navigateToScreen={() => {
              navigation.navigate('Home', {
                screen: 'FavoritesScreen'
              })
...
